file includes name,description of bucket

--- a/package.json
+++ b/package.json
@@ -1,1 +1,11 @@
-
+{
+  "name": "compressed-image",
+  "description": "",
+  "version": "0.2.0",
+  "dependencies": {},
+  "devDependencies": {
+    "serverless-offline": "^4.9.1",
+    "serverless-python-requirements": "^4.3.0",
+    "serverless-s3-local": "^0.3.23"
+  }
+}
